# doom-depth-c

./: .gitignore  CMakeLists.txt  README.md  armor.h  doomdepthc.sqlite  inventory.h  main.c  monster.h  player.h  spell.h  stage.h  stats.h  test.c  weapon.h
assets/: map_1.json  map_2.json
assets/armors/ascii/: chain_mail.asciiart  dragon.asciiart  god.asciiart  leather.asciiart  plate.asciiart
assets/ascii_text/digit/: 0.asciiart  1.asciiart  2.asciiart  3.asciiart  4.asciiart  5.asciiart  6.asciiart  7.asciiart  8.asciiart  9.asciiart
assets/ascii_text/lowercase/: a.asciiart  b.asciiart  c.asciiart  d.asciiart  e.asciiart  f.asciiart  g.asciiart  h.asciiart  i.asciiart  j.asciiart  k.asciiart  l.asciiart  m.asciiart  n.asciiart  o.asciiart  p.asciiart  q.asciiart  r.asciiart  s.asciiart  t.asciiart  u.asciiart  v.asciiart  w.asciiart  x.asciiart  y.asciiart  z.asciiart
assets/ascii_text/special/: greater_than.asciiart  left_bracket.asciiart  right_bracket.asciiart  unknown.asciiart
assets/ascii_text/uppercase/: a.asciiart  b.asciiart  c.asciiart  d.asciiart  e.asciiart  f.asciiart  g.asciiart  h.asciiart  i.asciiart  j.asciiart  k.asciiart  l.asciiart  m.asciiart  n.asciiart  o.asciiart  p.asciiart  q.asciiart  r.asciiart  s.asciiart  t.asciiart  u.asciiart  v.asciiart  w.asciiart  x.asciiart  y.asciiart  z.asciiart
assets/items_mgmt/ascii/: armors.asciiart  go_back.asciiart  gold.asciiart  health_potions.asciiart  mana_potions.asciiart  shop_owner.asciiart  weapons.asciiart
assets/maps/: aea1_map_1.json  aea_map_1.json  henri_map_1.json  map_1.json  map_1_save.json  map_2.json  map_3.json  map_4.json  map_5.json  pol_map_1.json  pol_map_2.json  pol_map_4.json  test.json
assets/monsters/ascii/: bat.ascii  bat.asciiart  delon.asciiart  demacon.ascii  demacon.asciiart  demon.asciiart  flowey.ascii  flowey.asciiart  ghost.ascii  ghost.asciiart  ghoul.asciiart  goblin.ascii  goblin.asciiart  machavoine.asciiart  sananes.ascii  sananes.asciiart  skeleton.ascii  skeleton.asciiart  troll.ascii  troll.asciiart  zombie.ascii  zombie.asciiart
assets/player/ascii/: player.ascii  player.asciiart
assets/stages/ascii/: empty_stage.asciiart  fight_done_stage.asciiart  fight_stage.asciiart  linked_map_stage.asciiart  shop_stage.asciiart  treasure_done_stage.asciiart  treasure_stage.asciiart
assets/stat_icons/ascii/: action_points.asciiart  attack.asciiart  defence.asciiart  hp.asciiart  mana.asciiart
assets/weapons/ascii/: butter_knife.ascii  butter_knife.asciiart  compass.asciiart  elder_wand.asciiart  flip_flop.asciiart  light_saber.asciiart  lightsaber.asciiart  wooden_sword.ascii  wooden_sword.asciiart
database/: doomdepthc.database
src/: doom_depth.c  doom_depth.h
src/ascii_art/: ascii_art.c  ascii_art.h  ascii_art_test.c  ascii_art_test.h
src/cli_utils/: cli_utils.c  cli_utils.h  cli_utils_unix.c  cli_utils_windows.c  types.h
src/cli_utils/ascii_art/: ascii_art.c  ascii_art.h  ascii_art_test.c
src/cli_utils/cli_text/: cli_text.h  cli_text_unix.c  cli_text_windows.c
src/confirm_quit_screen/: confirm_quit_screen.c  confirm_quit_screen.h
src/confirm_quit_screen/display/: display.c  display.h
src/entities/: entites.c  entities.c  entities.h
src/entities/armor/: armor.c  armor.h
src/entities/fight/: fight.c  fight.h
src/entities/inventory/: inventory.c  inventory.h
src/entities/json/: json.c  json.h  json_test.c
src/entities/monster/: monster.c  monster.h
src/entities/player/: player.c  player.h
src/entities/spell/: spell.c  spell.h
src/entities/stage/: stage.h
src/entities/stats/: stats.c  stats.h
src/entities/treasure/: treasure.c  treasure.h
src/entities/weapon/: weapon.c  weapon.h
src/event/: event.c  event.h
src/fight_screen/: fight_screen.c  fight_screen.h  types.h
src/fight_screen/display/: display.c  display.h
src/fight_screen/fight_actions/: fight_actions.c  fight_actions.h
src/fight_screen/fight_dimensions/: fight_dimensions.c  fight_dimensions.h
src/fight_screen/fight_menu/: fight_menu.c  fight_menu.h
src/fight_screen/fight_utils/: fight_utils.c  fight_utils.h
src/game_over/: game_over.c  game_over.h
src/game_over/display/: display.c  display.h
src/game_stats_screen/: game_stats_screen.c  game_stats_screen.h  types.h
src/game_stats_screen/display/: display.c  display.h
src/game_window/: game_window.c  game_window.h
src/help_screen/: help_screen.c  help_screen.h  types.h
src/help_screen/display/: display.c  display.h
src/inventory_screen/: inventory_screen.c  inventory_screen.h
src/inventory_screen/display/: display.c  display.h
src/inventory_screen/inventory_utils/: inventory_utils.c  inventory_utils.h
src/inventory_screen/utils/: inventory_utils.c  inventory_utils.h
src/level_up_screen/: level_up_screen.c  level_up_screen.h  types.h
src/level_up_screen/display/: display.c  display.h
src/load_game_screen/: delete_game_screen.c  delete_game_screen.h  load_game_screen.c  load_game_screen.h
src/load_game_screen/display/: display.c  display.h
src/logs/: log.c  log.h
src/map/: map.c  map.h  map_test.c  map_test.h
src/map/stage/: stage.c  stage.h
src/map_generation/: map_generation.c  map_generation.h
src/map_screen/: map_screen.c  map_screen.h
src/map_screen/map/: map.c  map.h  map_test.c  map_test.h
src/map_screen/stage/: stage.c  stage.h
src/minunit/: minunit.h
src/new_game_screen/: new_game_screen.c  new_game_screen.h
src/new_game_screen/display/: display.c  display.h
src/sdl_utils/: sdl_utils.c  sdl_utils.h
src/select_game_screen/: delete_game_screen.c  load_game_screen.c
src/select_game_screen/display/: display.c  display.h
src/shop_screen/: shop_screen.c  shop_screen.h
src/shop_screen/display/: display.c  display.h
src/shop_screen/utils/: shop_utils.c  shop_utils.h
src/start_menu/: start_menu.c  start_menu.h
src/start_menu/display/: display.c  (+1 more)
src/stats_screen/: stats_screen.c  stats_screen.h  types.h
src/ui_utils/: ui_utils.c  ui_utils.h
src/utils/: Array.c  array.c  array.h  array_test.c  array_test.h  list.c  router.h  utils.c  utils.h
(+68 files in other folders)
